--- a/myclouds-admin-webserver/src/main/resources/templates/index.html
+++ b/myclouds-admin-webserver/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <th:block th:replace="fragments/head" />
 </head>
 
-<body class="dashboard-page sb-l-o nano">
+<body class="dashboard-page sb-l-o">
 	<!--/* 公共代码 */-->
 	<div th:replace="fragments/common"></div>
 	
