--- a/myclouds-admin-webserver/src/main/resources/templates/modules/sys/enums.html
+++ b/myclouds-admin-webserver/src/main/resources/templates/modules/sys/enums.html
@@ -5,7 +5,7 @@
 <th:block th:replace="fragments/head" />
 </head>
 
-<body class="sb-l-o nano">
+<body class="sb-l-o">
 	<!--/* 公共代码 */-->
 	<div th:replace="fragments/common"></div>
 	
