--- a/myclouds-admin-webserver/src/main/resources/templates/fragments/head.html
+++ b/myclouds-admin-webserver/src/main/resources/templates/fragments/head.html
@@ -1,7 +1,7 @@
 <title th:text="${@thCxt.param('sys_title')}"></title>
 <meta charset="utf-8" />
-<meta name="keywords" content="MyClouds" />
-<meta name="author" content="xiongchun" />
+<meta name="keywords" content="MyClouds, Myclouds开发平台" />
+<meta name="description" content="MyClouds基于JavaEE技术体系和SpringCloud生态圈，以“标准功能可复用、通用模块可配置、业务需求快速开发、异构系统无缝集成、应用性能可监控扩展、系统日志可分析审计”为目标， 帮助企业落实IT策略、屏蔽技术壁垒，快速实现可水平扩展的高性能高可用业务愿景。 powered by xiongchun 熊春 307916217@qq.com" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <link rel='stylesheet' type='text/css' href='/theme/assets/skin/default_skin/css/googlefont.css' />
