--- a/myclouds-builder/src/main/resources/template/entity.java.vm
+++ b/myclouds-builder/src/main/resources/template/entity.java.vm
@@ -21,6 +21,8 @@ import java.sql.Timestamp;
 import java.io.Serializable;
 
 import lombok.Data;
+import lombok.ToString;
+import lombok.experimental.Accessors;
 ##java.lang.*下的类型不需要导入
 
 /**
@@ -33,6 +35,8 @@ import lombok.Data;
  * @date $!sysdate
  */
 @Data
+@ToString
+@Accessors(chain = true)
 public class ${tableDto.upname}Entity implements Serializable {
 
 	private static final long serialVersionUID = 1L;
