--- a/myclouds-builder/src/main/resources/template/entity.java.vm
+++ b/myclouds-builder/src/main/resources/template/entity.java.vm
@@ -22,7 +22,6 @@ import java.io.Serializable;
 
 import lombok.Data;
 import lombok.ToString;
-import lombok.experimental.Accessors;
 ##java.lang.*下的类型不需要导入
 
 /**
@@ -36,7 +35,7 @@ import lombok.experimental.Accessors;
  */
 @Data
 @ToString
-@Accessors(chain = true)
+// @Accessors(chain = true) 此注解和BeanUtils的属性复制冲突，暂时不适用链式编程注解
 public class ${tableDto.upname}Entity implements Serializable {
 
 	private static final long serialVersionUID = 1L;
