--- a/pangu_website/src/pages/index.module.css
+++ b/pangu_website/src/pages/index.module.css
@@ -10,6 +10,11 @@
   overflow: hidden;
 }
 
+.hero__title2{
+	font-size: 45px !important;
+	letter-spacing: 3px;
+}
+
 @media screen and (max-width: 966px) {
   .heroBanner {
     padding: 2rem;
@@ -20,4 +25,39 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.license {
+	color: ghostwhite;
+	text-decoration: none;
+}
+
+.license:hover {
+	color: ghostwhite;
+}
+
+.xcbutton {
+    background-color: #25c2a0; /* Green */
+    border: 2px dotted white;
+    color: #f4f4f5;
+    padding: 8px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+	font-weight: 500;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+	border-radius: 5px;
+	font-family: Caslon,Helvetica;
+}
+
+.xcbutton:hover {
+    background-color: white;
+	background:linear-gradient(to bottom, #ffffff 5%, #e9f9f4 100%);
+    color: #25c2a0;
+	border: 2px solid white;
+	text-decoration: none;
 }
